--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--img src="https://avatars.githubusercontent.com/u/48839911?v=4" alt="Adil Rehman's profile picture" srcset=""-->
    <table cellspacing="20">
        <tr>
-           <td> <img src="E:\Web projects\HTML-personal site\adil.png" alt="Adil Rehman's profile picture" srcset="" style="width: 200px;height: 200px;"></td>
+           <td> <img src="adil.png" alt="Adil Rehman's profile picture" srcset="" style="width: 200px;height: 200px;"></td>
            <td> <h1>Adil RehMan</h1>
             <p><em>Software Engineer <a href="https://github.com/adilwahla"><strong>Flutter developer</strong></a></em></p>
             <p>I am App developer as well as I develop websites. I ❤️ coffee & plant the trees</p></td>
@@ -90,8 +90,8 @@
 
 
 <hr>
-<a href="E:\Web projects\HTML-personal site\Hobbies.html">My Hobbies</a>
-<a href="E:\Web projects\HTML-personal site\contact.html">Contact Me</a>
+<a href="Hobbies.html">My Hobbies</a>
+<a href="contact.html">Contact Me</a>
 </body>
 
 </html>
